# openpdf-studio-staging

./: .gitignore  ADMIN-DASHBOARD-SUMMARY.md  ANALYTICS-SETUP.md  CREATED_FILES_MANIFEST.txt  FILES_INDEX.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  PRODUCT-SHOPPING-LIST.md  README.md  ROLLOUT-PLAN.md  SETUP_GUIDE.md  TAURI_PACKAGING_GUIDE.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: CLAUDE.md
.github/workflows/: deploy-pages.yml  release.yml  sync-staging.yml
admin/: .env.example  DEPLOYMENT.md  Dockerfile  FILES-OVERVIEW.md  INDEX.md  QUICKSTART.md  README.md  package.json  railway.json  server.js
admin/public/: index.html
admin/scripts/: seed-data.js
backend/: .env.example  .gitignore  drizzle.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
backend/drizzle/: 0000_lovely_leech.sql  0001_add_branding_subscriptions.sql  0002_fix_missing_user_columns.sql
backend/drizzle/meta/: 0000_snapshot.json  _journal.json
backend/src/: app.ts  server.ts
backend/src/config/: env.ts
backend/tests/: setup.ts
backend/tests/auth/: auth.routes.test.ts  auth.validators.test.ts
backend/tests/convert/: convert.routes.test.ts  (+1 more)
dashboard/: .env.production  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx
electron/: main.js  preload.js
mobile/: capacitor.config.ts
public/: index.html
scripts/: build.mjs  gen-icon.mjs  setup.sh
src/: analytics.js  api-client.js  dashboard.html  image-editor.html  index.html  manifest.json  pricing.html  smart-ocr-editor.html  sw.js
src-tauri/: Cargo.toml  SIGNING_SETUP.md  entitlements.plist  sign.ps1  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
(+81 files in other folders)
