[package]
name = "openpdf-studio"
version = "1.0.0"
description = "OpenPDF Studio - Free, open-source PDF and image editor"
authors = ["VagishKapila <contact@vagishkapila.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/VagishKapila/openpdf-studio"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open", "path-all", "fs-all", "window-all", "process-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

[features]
# This feature is used for production builds where `devPath` points to the filesystem and your frontend files are built
custom-protocol = ["tauri/custom-protocol"]

[[example]]
name = "updater"
path = "examples/updater.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"

[lib]
name = "openpdf_studio_lib"
path = "src/lib.rs"

[[bin]]
name = "openpdf-studio"
path = "src/main.rs"
