[package]
name = "openpdf-studio"
version = "1.0.0"
description = "OpenPDF Studio - Free, open-source PDF and image editor"
authors = ["VagishKapila"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/VagishKapila/openpdf-studio"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
